<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/button_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:baselineAligned="false"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ll_main"
        android:visibility="visible"
        android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:text="@string/save_loc"
        android:textColor="@color/blue_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal"
        android:text="@string/message"
        android:textColor="@color/blue_text"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_weight="0.05"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/tv_enter_manually"
            android:layout_width="0dp"
            android:layout_weight="0.425"
            android:layout_height="40dp"
            android:background="@drawable/purple_border_rounded_button"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/enter_manually"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:textColor="@color/blue_text"
            android:textSize="14sp"></TextView>
        <View
            android:layout_width="0dp"
            android:layout_weight="0.05"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/tv_allow_access"
            android:layout_width="0dp"
            android:layout_weight="0.425"
            android:layout_height="40dp"
            android:clickable="true"
            android:background="@drawable/purple_rounded_button"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/auto"
            android:foreground="?attr/selectableItemBackground"
            android:textColor="@color/white"
            android:textSize="14sp"></TextView>
        <View
            android:layout_width="0dp"
            android:layout_weight="0.05"
            android:layout_height="match_parent"/>

    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ll_manual"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center_horizontal"
            android:text="@string/manual_title"
            android:textColor="@color/purple_700"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center_horizontal"
            android:text="@string/manual_desc"
            android:textColor="@color/purple_500"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_city"
            android:hint="@string/city_name"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/purple_rounded_button"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/save"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:foreground="?attr/selectableItemBackground"
            android:textColor="@color/white"
            android:textSize="14sp"></TextView>

    </LinearLayout>


</LinearLayout>