<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="30dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:id="@+id/ll_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:gravity="center|left"
            android:text="@string/main_text"
            android:textColor="@color/blue_text"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:fontFamily="monospace"
            android:gravity="center_horizontal"
            android:visibility="gone"
            android:text="@string/main_description"
            android:textColor="@color/purple_500"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/purple_rounded_button"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/save"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="40dp"
            android:foreground="?attr/selectableItemBackground"
            android:textColor="@color/white"
            android:textSize="14sp"></TextView>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        android:paddingTop="30dp"
        android:background="@color/light_purple"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:gravity="center_horizontal"
            android:text="@string/added"
            android:textColor="@color/blue_text"
            android:textSize="22sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="1dp"
        android:layoutAnimation="@anim/layout_animation"
       />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>